--- a/publisher/dockerfile
+++ b/publisher/dockerfile
@@ -7,4 +7,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY app/main.py .
 
-CMD [ "python3", "main.py" ]
+CMD [ "flask", "run", "--host=0.0.0.0 ]
