--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3.7"
 
 services:
-#  receiver:
-#    build: "./receiver"
-#    restart: always
-#    links:
-#      - mq
-#    depends_on:
-#      - mq
+  receiver:
+    build: "./receiver"
+    restart: always
+    links:
+      - mq
+    depends_on:
+      - mq
 
   publisher:
     build: "./publisher" 
@@ -18,7 +18,6 @@ services:
       - 5000:5000
     depends_on:
       - mq
-#      - receiver
 
   mq:
     image: rabbitmq:3-management
